methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:23: error: Unit does not take parameters
run () {
       ^